began vector to matrix for improving analysis bottleneck

--- a/divergene_interview/question2/Peptide_detection_question_2_playground.ipynb
+++ b/divergene_interview/question2/Peptide_detection_question_2_playground.ipynb
@@ -7495,6 +7495,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b0456710",
+   "metadata": {},
+   "source": [
+    "Below: \n",
+    "\n",
+    "We want to convert this all to a matrix operation instead of an iterative operation\n",
+    "Line 19 - turn it into a matrix instead of an array with 30 columns?\n",
+    "Don't use dtype=object, add null or empty value paddings on the end\n",
+    "\n",
+    "if x == python list\n",
+    "x=np.asarry(x)\n",
+    " \n",
+    "\n",
+    "Try sorting the rows of the matrix to put each sequence into different categories\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "id": "053d4a11",
@@ -51739,7 +51757,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "231528bd",
+   "id": "ff877aa0",
    "metadata": {},
    "outputs": [
     {
@@ -51759,7 +51777,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a22b0cf2",
+   "id": "eff7713a",
    "metadata": {},
    "source": [
     "### I spent some time trying to speed up the analysis using Julia but wasn't quite able to figure it out."
@@ -51768,7 +51786,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c2f879ba",
+   "id": "3c8a1097",
    "metadata": {},
    "outputs": [
     {
@@ -51789,7 +51807,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "5b3a917a",
+   "id": "205cf7dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51800,7 +51818,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "7e1f85a4",
+   "id": "7a0919c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51811,7 +51829,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "255965cd",
+   "id": "bcf59049",
    "metadata": {},
    "outputs": [
     {
@@ -51829,7 +51847,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "734fe76f",
+   "id": "6fe42a4d",
    "metadata": {},
    "outputs": [
     {
@@ -51866,7 +51884,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "5a599b01",
+   "id": "b60b6c96",
    "metadata": {},
    "outputs": [
     {
@@ -51903,7 +51921,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "243e1c27",
+   "id": "7355bb86",
    "metadata": {},
    "outputs": [
     {
